# Amayori-Lang

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  package-lock.json
.github/workflows/: ci-cd.yml
src/: AmayoriAST.hpp  amayori-llvm.cpp  amayori-llvm.hpp  amayoriAST.hpp  arena.hpp  lexer.hpp  llvm_codegen.cpp  main.cpp  parser.hpp  test_main.cpp
src/amyr-ast/: ast.hpp
src/amyr-borrow-check/: BorrowChecker.cpp  BorrowChecker.hpp  README.md
src/amyr-data-structures/: binary_search_util.hpp
src/amyr-debug-utils/: unreachable.hpp
src/amyr-hash/: hash.hpp
src/amyr-parser/: arena.hpp
src/amyr-serialize/: serialize.hpp
src/amyr-serialize/opaque/: mem_encoder.hpp
src/amyr-tokenizer/: cursor.hpp  low_lexer.hpp  tokenizer.hpp  unicode_escape.hpp
src/amyr-utils/: iterator.hpp  result.hpp  vec.hpp
